[package]
name = "actix-middleware-rfc7662"
version = "0.2.1"
edition = "2021"
description = "Actix-web extractor which validates OAuth2 tokens through an RFC 7662 token introspection endpoint."
license = "MIT"
repository = "https://git.jesterpm.net/pub/jesterpm/actix-middleware-rfc7662.git"
authors = ["Jesse Morgan <jesse@jesterpm.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "demo"
required-features = ["indieauth"]

[features]
indieauth = ["serde"]

[dependencies]
log = "0.4"
actix-web = "4"
oauth2 = "4"
futures-util = "0.3"
serde = {version = "1", features = ["derive"], optional = true }
